Add initial markdown file for GitHub usage guide

--- a/0010. 처음 커밋.md
+++ b/0010. 처음 커밋.md
@@ -1,3 +1,5 @@
+<img width="220" height="1040" alt="image" src="https://github.com/user-attachments/assets/22af9a15-39d6-4172-99e5-f7be0a1e5b68" />
+
 # 깃 허브 사용법
 ## 1. 첫 커밋
 ### 2. md 형식 연습하기
